--- a/src/components/Videos/Videos.css
+++ b/src/components/Videos/Videos.css
@@ -6,9 +6,21 @@
 
 .video-player {
     margin-top: 50px;
+    margin-left: 10px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-content: center;
+}
+
+.output-text-scroll {
+    font-weight: bold;
+    font-size: 20px;
+    overflow: scroll;
+    resize: none;
+    width: 50%;
+    margin-right: 5px;
+    margin-left: 10px;
+    margin-bottom: 6px;
 }
 
 .video-thumbnail:hover {
@@ -36,4 +48,116 @@
 
 .carousel {
     background-color: #afc8ff;
+}
+
+.row {
+    overflow: auto;
+    width: 80%;
+    margin: 0 auto;
+}
+.row__inner {
+    transition: 450ms -webkit-transform;
+    transition: 450ms transform;
+    transition: 450ms transform, 450ms -webkit-transform;
+    font-size: 0;
+    white-space: nowrap;
+    margin: 70.3125px 0;
+    padding-bottom: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.tile {
+    position: relative;
+    display: inline-block;
+    width: 250px;
+    height: 140px;
+    max-width: 250px;
+    max-height: 140px;
+    font-size: 20px;
+    cursor: pointer;
+    margin-right: 20px;
+    transition: 450ms all;
+    -webkit-transform-origin: center left;
+    transform-origin: center left;
+}
+
+.tile-media{
+    max-width: 250px;
+    max-height: 140px;
+}
+.tile__img {
+    width: 250px;
+    height: 140px;
+    -o-object-fit: cover;
+    object-fit: cover;
+}
+.tile__details {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    font-size: 10px;
+    opacity: 0;
+    background: linear-gradient(to top, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0) 100%);
+    transition: 450ms opacity;
+    max-width: 250px;
+    max-height: 140px;
+}
+.tile__details:after,
+.tile__details:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+.tile__details:after {
+    margin-top: -25px;
+    margin-left: -25px;
+    width: 50px;
+    height: 50px;
+    border: 3px solid #ecf0f1;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 100%;
+    background: rgba(0,0,0,0.5);
+    z-index: 1;
+}
+.tile__details:before {
+    content: '▶';
+    left: 0;
+    width: 100%;
+    font-size: 30px;
+    margin-left: 7px;
+    margin-top: -18px;
+    text-align: center;
+    z-index: 2;
+}
+.tile:hover .tile__details {
+    opacity: 1;
+}
+.tile__title {
+    position: absolute;
+    bottom: 0;
+    padding: 10px;
+    z-index: 2;
+    color: white;
+}
+.row__inner:hover {
+    -webkit-transform: translate3d(-62.5px, 0, 0);
+    transform: translate3d(-62.5px, 0, 0);
+}
+.row__inner:hover .tile {
+    opacity: 0.3;
+}
+.row__inner:hover .tile:hover {
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+    opacity: 1;
+}
+.tile:hover ~ .tile {
+    -webkit-transform: translate3d(125px, 0, 0);
+    transform: translate3d(125px, 0, 0);
 }
