--- a/src/components/Videos/Videos.css
+++ b/src/components/Videos/Videos.css
@@ -12,6 +12,19 @@
     align-content: center;
 }
 
+.image-container {
+    margin-left: 10px;
+    overflow: scroll;
+    width: 50%;
+    height: 389px;
+}
+
+.image-output {
+    width: 100%;
+    height: 500px;
+    overflow: scroll;
+}
+
 .output-text-scroll {
     font-weight: bold;
     font-size: 20px;
@@ -34,8 +47,8 @@
     margin: 0 auto;
 }
 
-.Videos{
-    background: url("/bg.jpg") no-repeat;
+.Videos {
+    background: url(bg.jpg) no-repeat;
     background-size: cover;
     width: 100%;
 }
@@ -74,16 +87,21 @@
     white-space: nowrap;
     margin: 35px 0;
     padding-bottom: 10px;
-    width: 100%;
+    max-width: 1600px;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
+
+.row__inner::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+}
+
 .tile {
     position: relative;
     display: inline-block;
-    width: 250px;
-    height: 140px;
+    min-width: 250px;
+    min-height: 140px;
     max-width: 250px;
     max-height: 140px;
     font-size: 20px;
@@ -94,16 +112,18 @@
     transform-origin: center left;
 }
 
-.tile-media{
+.tile-media {
     max-width: 250px;
     max-height: 140px;
 }
+
 .tile__img {
     width: 250px;
     height: 140px;
     -o-object-fit: cover;
     object-fit: cover;
 }
+
 .tile__details {
     position: absolute;
     bottom: 0;
@@ -112,11 +132,12 @@
     top: 0;
     font-size: 10px;
     opacity: 0;
-    background: linear-gradient(to top, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
     transition: 450ms opacity;
     max-width: 250px;
     max-height: 140px;
 }
+
 .tile__details:after,
 .tile__details:before {
     content: '';
@@ -124,6 +145,7 @@
     top: 50%;
     left: 50%;
 }
+
 .tile__details:after {
     margin-top: -25px;
     margin-left: -25px;
@@ -133,9 +155,10 @@
     line-height: 50px;
     text-align: center;
     border-radius: 100%;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
+
 .tile__details:before {
     content: '▶';
     left: 0;
@@ -147,9 +170,11 @@
     z-index: 2;
     color: white;
 }
+
 .tile:hover .tile__details {
     opacity: 1;
 }
+
 .tile__title {
     position: absolute;
     bottom: 0;
@@ -157,18 +182,22 @@
     z-index: 2;
     color: white;
 }
+
 .row__inner:hover {
     -webkit-transform: translate3d(-62.5px, 0, 0);
     transform: translate3d(-62.5px, 0, 0);
 }
+
 .row__inner:hover .tile {
     opacity: 0.3;
 }
+
 .row__inner:hover .tile:hover {
     -webkit-transform: scale(1.5);
     transform: scale(1.5);
     opacity: 1;
 }
+
 .tile:hover ~ .tile {
     -webkit-transform: translate3d(125px, 0, 0);
     transform: translate3d(125px, 0, 0);
